tests/errors/type_check/statement/assign_field_type_mismatch.sim

        struct S { f: i64 }
        fn f(s: S) {
            entry:
            s.f = true;
            return
        }
        